fix footnote triangle alignment

--- a/assets/scss/footnotes.scss
+++ b/assets/scss/footnotes.scss
@@ -13,15 +13,12 @@
 
 .littlefoot-footnote__wrapper {
   min-width: 500px;
-  padding: 16px;
 }
 
 .littlefoot-footnote__content {
   font-size: 14px !important;
   line-height: 24px !important;
-  margin: 0 !important;
   max-height: 500px !important;
-  padding: 0 !important;
   text-align: left;
 
   .footnote-backref {
